--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
 <table>
   <td>
     <table>
-      <tr><img src="images/1.JPG" width = "250px" alt="myPicture.JPG"> </tr>
-          <tr><img src="images/2.JPG" width = "250px" alt="myPictur.JPG"> </tr>
-            <tr><img src="images/3.JPG" width = "250px" alt="myPictu.JPG"> </tr>
+      <tr><img src="images/1.jpg" width = "250px" alt="myPicture.JPG"> </tr>
+          <tr><img src="images/2.jpg" width = "250px" alt="myPictur.JPG"> </tr>
+            <tr><img src="images/3.jpg" width = "250px" alt="myPictu.JPG"> </tr>
               <tr><img src="images/4.JPG" width = "250px" alt="myPict.JPG"> </tr>
-                <tr><img src="images/5.JPG" width = "250px" alt="myPic.JPG"> </tr>
-                  <tr><img src="images/6.JPG" width = "250px" alt="myPi.JPG"> </tr>
+                <tr><img src="images/5.jpg" width = "250px" alt="myPic.JPG"> </tr>
+                  <tr><img src="images/6.jpg" width = "250px" alt="myPi.JPG"> </tr>
 
     </td>
     </table>
     <table>
-      <td><tr><img src="images/8.JPG" width = "250px" alt="yPicture.JPG"> </tr>
+      <td><tr><img src="images/8.jpg" width = "250px" alt="yPicture.JPG"> </tr>
         <tr><img src="images/10.JPG" width = "250px" alt="Picture.JPG"> </tr>
         <tr><img src="images/11.JPG" width = "250px" alt="icture.JPG"> </tr>
-        <tr><img src="images/13.PNG" width = "250px" alt="cture.JPG"> </tr>
-        <tr><img src="images/12.PNG" width = "250px" alt="ture.JPG"> </tr>
+        <tr><img src="images/13.png" width = "250px" alt="cture.JPG"> </tr>
+        <tr><img src="images/12.png" width = "250px" alt="ture.JPG"> </tr>
           <tr><img src="images/7.JPG" width = "250px" alt="ure.JPG"> </tr>
       </td>
     </table>
@@ -102,15 +102,6 @@
 <h4> Additional Info </h4>
 <a href="contacts.html"> Contact Me </a> |
 <a href="myFave.html"> Check Out my favorites</a>
-
-
-
-
-
-
-
-
-
 
 
   </body>
